--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,11 @@ libc = "0.2"
 ringbuf = "0.2.6"
 dashmap = { version = "5.1", features=["serde"] }
 parking_lot = "0.12"
+bit-set = "0.5"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"]}
